# foundry-pipeline-assistant

./: .env.example  .gitignore  LICENSE  Makefile  README.md  check_config.py  convert_endpoint.py  demo.tape  foundry_pipeline_assistant.py  pyproject.toml  pytest.ini  run_agent.py  run_tests.py
.github/workflows/: ci.yml
common/: __init__.py  azure_ai.py
services/: __init__.py  analyzer_agent.py  bamboo_mock.py  logs_mock.py  orchestrator.py  reporting_agent.py
tests/: __init__.py  test_orchestrator.py  test_services.py
